--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,3 +5,7 @@ $green: rgba(136, 153, 97, 2);
 $purple: rgba(117, 112, 131, 1);
 $blue: rgba(108, 145, 194, 1);
 
+$success: rgba(123, 153, 55, 1);
+$error: rgba(192, 50, 33, 1);
+$warning: rgba(191, 143, 32, 1);
+$info: rgba(75, 126, 193, 1);
