--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,3 +9,7 @@ $success: rgba(123, 153, 55, 1);
 $error: rgba(192, 50, 33, 1);
 $warning: rgba(191, 143, 32, 1);
 $info: rgba(75, 126, 193, 1);
+
+$breakpoint-tablet: 900px;
+$breakpoint-mobile: 425px;
+$breakpoint-mobile-small: 320px;
